# NYCJarvis_

NYCJarvis_Client/: CMakeLists.txt  NYCJarvis_Client.cpp
NYCJarvis_Common/: nyc_jarvis.hpp  nyc_jarvis_base.hpp  nyc_jarvis_client.hpp  nyc_jarvis_connection.hpp  nyc_jarvis_custom_info_types.hpp  nyc_jarvis_info.hpp  nyc_jarvis_server.hpp  nyc_jarvis_threadsafeQueue.hpp
NYCJarvis_Common/GTK_UI_Files/: chat_page.ui  header_bar.ui
NYCJarvis_Server/: CMakeLists.txt  NYCJarvis_Server.cpp  NYCJarvis_Server.hpp  NYCJarvis_Server_CLIB.cpp  test.py
